главная страница подогнана под размер
задолбался

--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
         <ul>
           <li class="item">
             <a href="mailto:info@devstudio.com" class="mailtel link">
-              <img class="img-box" src="./images/envelope.svg" alt="иконка почтового конверта"/>info@devstudio.com
+              <img class="img-box-nav" src="./images/envelope.svg" alt="иконка почтового конверта"/>
+              info@devstudio.com
             </a>
           </li>
           <li class="item">
             <a href="tel:+380961111111" class="mailtel link">
-              <img class="img-box" src="./images/smartphone.svg" alt="иконка телефона" />&plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
+              <img class="img-box-nav" src="./images/smartphone.svg" alt="иконка телефона" />
+              &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
             </a>
           </li>
         </ul>
@@ -111,8 +113,8 @@
     </section>
 
     <!-- Чем мы занимаемся conteiner  -->
-    <section>
-      <div class="conteiner doing">
+    <section class="conteiner">
+      <div class="doing">
         <h2>
           Чем мы занимаемся
         </h2>
@@ -120,7 +122,7 @@
           <ul>
             <li class="block-doing-txt">
               <div class="position-block-doing">
-                <img src="./images/doing/img_a.svg" alt="фотография с ноутбуком" />
+                <img class="img-box" src="./images/doing/a.jpg"" alt="фотография с ноутбуком" />
                 <h3 class="doing-txt">
                   Десктопные приложения
                 </h3>
@@ -128,7 +130,7 @@
             </li>
             <li class="block-doing-txt">
               <div class="position-block-doing">
-                <img src="./images/doing/img_b.svg" alt="фотография с мобильным телефоном" />
+                <img class="img-box"  src="./images/doing/b.jpg" alt="фотография с мобильным телефоном" />
                 <h3 class="doing-txt">
                   Мобильные приложения
                 </h3>
@@ -136,7 +138,7 @@
             </li>
             <li class="block-doing-txt">
               <div class="position-block-doing">
-                <img src="./images/doing/img_c.svg" alt="фотография с гравической программой" />
+                <img  class="img-box" src="./images/doing/c.jpg" alt="фотография с гравической программой" />
                 <h3 class="doing-txt">
                   Дизайнерские решения
                 </h3>
@@ -376,8 +378,8 @@
     </div> 
 
     <!-- общяя\центральная нижняя часть футера -->
-    <div class="developed">
-      <p>
+    <div>
+      <p class="developed">
         2020 | Developed by GoIT Students
       </p>
     </div>
