--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   <header>
     <div class="header-nav conteiner">
       <div class="block-logo">
-        <p class="logo"><b>Web&nbsp;<span class="logo-black">Studio</span></b></p>
+        <a href="#" class="logo"><b>Web&nbsp;<span class="logo-black">Studio</span></b></a>
       </div>
       <div class="navigation">
         <nav>
@@ -161,14 +161,15 @@
     <div class="conteiner">
       <!-- левая верхняячасть футера -->
       <div class="footer-left">
-        <p class="logo">
-          <b>Web&nbsp;<span class="logo-white">Studio</span></b>
-        </p>
+        <a href="#" class="logo"><b>Web&nbsp;<span class="logo-white">Studio</span></b></a>
         <address class="map">
           г. Киев, пр-т Леси Украинки, 26
         </address>
-        <a class="mailtel">
-          info@devstudio.com<br>&plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
+        <a class="mail-content">
+          info@devstudio.com
+        </a>
+        <a class="tel-content">
+          &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
         </a>
       </div>
       <!-- средняя верхняя часть футера -->
