Привел опять все в порядок
конца и края нет этому (( Доводишь и доводишь

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
+  <title>Studio</title>
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./css/portfolio.css">
   <link rel="stylesheet" href="./css/colors.css">
@@ -15,7 +15,9 @@
   <header>
     <div class="header-nav conteiner">
       <div class="block-logo">
-        <p class="logo"><b>Web&nbsp;<span class="logo-black">Studio</span></b></p>
+        <a href="#" class="logo">
+          <b>Web&nbsp;<span class="logo-black">Studio</span></b>
+        </a>        
       </div>
       <div class="navigation">
         <nav>
@@ -47,7 +49,6 @@
 
   <main>
     <section class="header-hero">
-          <!-- <img src="./images/main_foto.svg" alt="Photo of our employees" /> -->
       <div>
         <h1>
           <b>эффективные решения<br>для вашего бизнеса</b>
