--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,9 @@
   <header>
     <div class="header-nav conteiner">
       <div class="block-logo">
-        <a href="#" class="logo"><b>Web&nbsp;<span class="logo-black">Studio</span></b></a>
+        <a href="#" class="logo">
+          <b>Web&nbsp;<span class="logo-black">Studio</span></b>
+        </a>        
       </div>
       <div class="navigation">
         <nav>
