на странице портфолио в футере соц сети
попробовал через псевдоклассы сделать иконки и понял, что это делается совсем по-другому, так как много затрачено времени на такую мелочь.
Скорее всего это делается через редактирование SVG формата

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
       </div>
       <div class="header-buttons" >
         <ul>
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="mailtel link">
-              <img class="img-box-nav" src="./images/envelope.svg" alt="иконка почтового конверта"/>
+          <li class="item mail">
+            <a href="mailto:info@devstudio.com" class="link">
+              <!-- <img class="img-box-nav" src="./images/envelope.svg" alt="иконка почтового конверта"/> -->
               info@devstudio.com
             </a>
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="mailtel link">
-              <img class="img-box-nav" src="./images/smartphone.svg" alt="иконка телефона" />
+          <li class="item phone">
+            <a href="tel:+380961111111" class="link">
+              <!-- <img class="img-box-nav" src="./images/smartphone.svg" alt="иконка телефона" /> -->
               &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
             </a>
           </li>
@@ -48,17 +48,15 @@
   </header>
 
   <main>
-    <section class="header-hero">
-      <div>
+    <section class="hero-contriner">
+      <div class="hero-content">
         <h1>
           <b>эффективные решения<br>для вашего бизнеса</b>
         </h1> 
-      </div>      
-      <div>
         <a class="button-hero" href="#">
           <b>Заказать услугу</b>
         </a>
-      </div>
+      </div> 
     </section>
 
     <!-- section Преимущества компании conteiner -->
