--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
       <div class="navigation">
         <nav>
           <ul class="site-nav">
-            <li class="item"><a class="link" href="./index.html">Студия</a></li>
+            <li class="item"><a class="link " href="./index.html">Студия</a></li>
             <li class="item"><a class="link activ" href="./portfolio.html">Портфолио</a></li>
             <li class="item"><a class="link" href="./contacts.html">Контакты</a></li>
           </ul>
@@ -31,15 +31,15 @@
       </div>
       <div class="header-buttons" >
         <ul>
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="mailtel link">
-              <img class="img-box-nav" src="./images/envelope.svg" alt="иконка почтового конверта"/>
+          <li class="item mail">
+            <a href="mailto:info@devstudio.com" class="link">
+              <!-- <img class="img-box-nav" src="./images/envelope.svg" alt="иконка почтового конверта"/> -->
               info@devstudio.com
             </a>
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="mailtel link">
-              <img class="img-box-nav" src="./images/smartphone.svg" alt="иконка телефона" />
+          <li class="item phone">
+            <a href="tel:+380961111111" class="link">
+              <!-- <img class="img-box-nav" src="./images/smartphone.svg" alt="иконка телефона" /> -->
               &plus;38&nbsp;096&nbsp;111&nbsp;11&nbsp;11
             </a>
           </li>
@@ -181,26 +181,11 @@
           <b>Присоединяйтесь</b>
         </p>
         <ul>
-          <li>
-            <a href="https://www.instagram.com/">
-              <img src="./images/inst.svg" alt="ссылка на соц.сеть" />
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/">
-              <img src="./images/twit.svg" alt="ссылка на соц.сеть" />
-            </a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/">
-              <img src="./images/fb.svg" alt="ссылка на соц.сеть" />
-            </a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/">
-              <img src="./images/in.svg" alt="ссылка на соц.сеть" />
-            </a>
-          </li>
+          <li><a class="soc-links instafram" href="#" aria-label=" ссылка на социальную сеть инстаграм"></a></li>
+          <li><a class="soc-links twitter" href="#" aria-label="ссылка на социальную сеть твиттер"></a></li>
+          <li><a class="soc-links facebook" href="#" aria-label="ссылка на социальную сеть фэйсбук"></a></li>
+          <li><a class="soc-links linkedin" href="#" aria-label="ссылка на социальную сеть линкедин"></a></li>
+
         </ul>
       </div>      
 
