Оформил форму подписки
допилил стили футера

--- a/index.html
+++ b/index.html
@@ -343,37 +343,24 @@
           <b>Присоединяйтесь</b>
         </p>
         <ul>
-          <li>
-            <a href="https://www.instagram.com/">
-              <img src="./images/inst.svg" alt="ссылка на соц.сеть" />
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/">
-              <img src="./images/twit.svg" alt="ссылка на соц.сеть" />
-            </a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/">
-              <img src="./images/fb.svg" alt="ссылка на соц.сеть" />
-            </a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/">
-              <img src="./images/in.svg" alt="ссылка на соц.сеть" />
-            </a>
-          </li>
+          <li><a class="soc-links instafram" href="#" aria-label=" ссылка на социальную сеть инстаграм"></a></li>
+          <li><a class="soc-links twitter" href="#" aria-label="ссылка на социальную сеть твиттер"></a></li>
+          <li><a class="soc-links facebook" href="#" aria-label="ссылка на социальную сеть фэйсбук"></a></li>
+          <li><a class="soc-links linkedin" href="#" aria-label="ссылка на социальную сеть линкедин"></a></li>
         </ul>
       </div>      
 
       <!-- правая верхняя часть футера с подпиской -->
       <div class="subscribe">
-        <p>
-          <b>Подписаться на рассылку</b>
-        </p>
-        <a class="button" href="#">
-          <b>Подписаться</b><span class="iconsend"><img src="./images/icon-send.svg" alt=""></span>
-        </a>
+        <form action="">
+          <p>
+            <b>Подписаться на рассылку</b>
+          </p>
+          <input type="text" value="E-mail" placeholder="E-mail" onfocus="this.value=''">
+          <a class="button" href="#">
+            <b>Подписаться</b>
+          </a>
+        </form>
       </div>        
     </div> 
 
