--- a/portfolio.html
+++ b/portfolio.html
@@ -191,12 +191,18 @@
 
       <!-- правая верхняя часть футера с подпиской -->
       <div class="subscribe">
-        <p>
-          <b>Подписаться на рассылку</b>
-        </p>
-        <a class="button" href="#">
-          <b>Подписаться</b><span class="iconsend"><img src="./images/icon-send.svg" alt=""></span>
-        </a>
+        <form action="">
+          <p>
+            <b>Подписаться на рассылку</b>
+          </p>
+          <input type="text" value="E-mail">
+          <a class="button" href="#">
+            <b>Подписаться</b>
+            <!-- <span class="iconsend">
+              <img src="./images/icon-send.svg" alt="">
+            </span> -->
+          </a>
+        </form>
       </div>        
     </div> 
 
