оформление псевдо элементов
продолжаю офомлять стили псевдоэлементов. Осталось иконкисоцсетей  "наши клиенты" на главной и в портфолио карточки с наведением

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           Преимущества нашей компании
         </h2>
           <ul class="features-groupe"> 
-            <li class="features-box-content">
-              <img class="img-features" src="./images/features/antena.svg" alt="иконка радара для поиска"/>
+            <li class="features-box-content icon-antena">
+              <!-- <img class="img-features" src="./images/features/antena.svg" alt="иконка радара для поиска"/> -->
               <h3>
                 Внимание к деталям
               </h3>
@@ -77,8 +77,8 @@
                 формированию позиции.
               </p>
             </li>
-            <li class="features-box-content">
-              <img class="img-features" src="./images/features/clock.svg" title="наша пунктуальность заслуживает уважения" />
+            <li class="features-box-content icon-clock">
+              <!-- <img class="img-features" src="./images/features/clock.svg" title="наша пунктуальность заслуживает уважения" /> -->
               <h3>
                 Пунктуальность
               </h3>
@@ -87,8 +87,8 @@
                 влечет за собой.
               </p>
             </li>
-            <li class="features-box-content">
-              <img class="img-features" src="./images/features/diagram.svg" alt="иконка с диаграммой" title="постоянно держим руку на пульсе" />
+            <li class="features-box-content icon-diagram">
+              <!-- <img class="img-features" src="./images/features/diagram.svg" alt="иконка с диаграммой" title="постоянно держим руку на пульсе" /> -->
               <h3>
                 Планирование
               </h3>
@@ -97,8 +97,8 @@
                 степени обуславливает.
               </p>
             </li>
-            <li class="features-box-content">
-              <img class="img-features" src="./images/features/astronaut.svg" alt="иконка с космонавтом" title="мы следим за современными технологиями"  />
+            <li class="features-box-content icon-astronaut">
+              <!-- <img class="img-features" src="./images/features/astronaut.svg" alt="иконка с космонавтом" title="мы следим за современными технологиями"  /> -->
               <h3>
                 Современные технологии
               </h3>
@@ -155,14 +155,9 @@
           Наша команда
         </h2>
         <ul class="list-command-box">
-          <li class="command-box">
-            <img  class="img-comand"  src="./images/comand/js.svg" alt="Фотография нашего сотрудника" />
-            <h3>
-              John Smith
-            </h3>
-            <p>
-              Product Designer
-            </p>
+          <li class="command-box employee-a">
+            <h3>John Smith</h3>
+            <p>Product Designer</p>
             <div class="command-soc-link">
               <ul>
                 <li>
@@ -188,14 +183,9 @@
               </ul>
             </div>
           </li>
-          <li class="command-box">
-            <img  class="img-comand" src="./images/comand/ms.svg" alt="Фотография нашего сотрудника" />
-            <h3>
-              Marta Stewart
-            </h3>
-            <p>
-              Frontend Developer
-            </p>
+          <li class="command-box employee-b">
+            <h3>Marta Stewart</h3>
+            <p>Frontend Developer</p>
             <div class="command-soc-link">
               <ul>
                 <li>
@@ -221,14 +211,9 @@
               </ul>
             </div>
           </li>
-          <li class="command-box">
-            <img  class="img-comand" src="./images/comand/rj.svg" alt="Фотография нашего сотрудника" />
-            <h3>
-              Robert Jakis
-            </h3>
-            <p>
-              Marketing
-            </p>
+          <li class="command-box employee-c">
+            <h3>Robert Jakis</h3>
+            <p>Marketing</p>
             <div class="command-soc-link">
               <ul>
                 <li>
@@ -254,14 +239,9 @@
               </ul>
             </div>
           </li>
-          <li class="command-box">
-            <img class="img-comand" src="./images/comand/md.svg" alt="Фотография нашего сотрудника" />
-            <h3>
-              Martin Doe
-            </h3>
-            <p>
-              UI Designer
-            </p>
+          <li class="command-box employee-d">
+            <h3>Martin Doe</h3>
+            <p>UI Designer</p>
             <div class="command-soc-link">
               <ul>
                 <li>
