--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <body>
 
   <!-- Шапка сайта с навигацией conteiner -->
-  <header>
+  <header class="underline">
     <div class="header-nav conteiner">
       <div class="block-logo">
         <a href="#" class="logo">
@@ -76,8 +76,7 @@
     <ul >
       <li class="card">
         <a href="#">
-          <img class="card-img" src="./images/portfolio/a.jpg" width="370px" alt="фотография компании наших клиентов" />
-          <div class="card-content">
+          <div class="card-content icon-a-min">
             <h2 class="card-title">Технокряк</h2>
             <p class="card-discr">Веб-сайт</p>
           </div>
@@ -85,8 +84,7 @@
       </li>
       <li class="card">
         <a href="#">
-          <img  class="card-img" src="./images/portfolio/b.jpg" width="370px" alt="фотография компании наших клиентов" />
-          <div class="card-content">
+          <div class="card-content icon-b-min">
             <h2 class="card-title">Постер New Orlean vs Golden Stars</h2>
             <p class="card-discr">Дизайн</p>
           </div>
@@ -94,8 +92,7 @@
       </li>
       <li class="card">
         <a href="#">
-          <img  class="card-img" src="./images/portfolio/c.jpg" width="370px" alt="фотография компании наших клиентов" />
-          <div class="card-content">
+          <div class="card-content icon-c-min">
             <h2 class="card-title">Ресторан Seafood</h2>
             <p class="card-discr">Приложение</p> 
           </div>
@@ -103,8 +100,7 @@
       </li>
       <li class="card">
         <a href="#">
-          <img  class="card-img" src="./images/portfolio/d.jpg" width="370px" alt="фотография компании наших клиентов" />
-          <div class="card-content">
+          <div class="card-content icon-d-min">
             <h2 class="card-title">Проект Prime</h2>
             <p class="card-discr">Маркетинг</p> 
           </div>
@@ -112,8 +108,7 @@
       </li>
       <li class="card">
         <a href="#">
-          <img  class="card-img" src="./images/portfolio/e.jpg" alt="фотография компании наших клиентов" />
-          <div class="card-content">
+          <div class="card-content icon-i-min">
             <h2 class="card-title">Проект Boxe</h2>
             <p class="card-discr">Приложение</p> 
           </div>
@@ -121,8 +116,7 @@
       </li>
       <li class="card">
         <a href="#">
-          <img  class="card-img" src="./images/portfolio/f.jpg" width="370px" alt="фотография компании наших клиентов" />
-          <div class="card-content">
+          <div class="card-content icon-f-min">
             <h2 class="card-title">Inspiration has no Borders</h2>
            <p class="card-discr">Веб-сайт</p>
           </div> 
@@ -130,8 +124,7 @@
       </li>
       <li class="card">
         <a href="#">
-          <img  class="card-img" src="./images/portfolio/g.jpg" width="370px" alt="фотография компании наших клиентов" />
-          <div class="card-content">
+          <div class="card-content icon-g-min">
             <h2 class="card-title">Издание Limited Edition</h2>
            <p class="card-discr">Дизайн</p>
           </div> 
@@ -139,8 +132,7 @@
       </li>
       <li class="card">
         <a href="#">
-          <img  class="card-img" src="./images/portfolio/h.jpg" width="370px" alt="фотография компании наших клиентов" />
-          <div class="card-content">
+          <div class="card-content icon-h-min">
             <h2 class="card-title">Проект LAB</h2>
             <p class="card-discr">Маркетинг</p>
           </div> 
@@ -148,8 +140,7 @@
       </li>
       <li class="card">
         <a href="#">
-          <img  class="card-img" src="./images/portfolio/f.jpg" width="370px" alt="фотография компании наших клиентов" />
-          <div class="card-content">
+          <div class="card-content icon-i-min">
             <h2 class="card-title">Growing Business</h2>
             <p class="card-discr">Приложение</p> 
           </div>
