--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <ul>
             <li class="block-doing-txt">
               <div class="position-block-doing">
-                <img class="img-box" src="./images/doing/a.jpg"" alt="фотография с ноутбуком" />
+                <img class="img-box" src="./images/portfolio/i-min.jpg"" alt="фотография с ноутбуком" />
                 <h3 class="doing-txt">
                   Десктопные приложения
                 </h3>
@@ -137,7 +137,7 @@
             </li>
             <li class="block-doing-txt">
               <div class="position-block-doing">
-                <img  class="img-box" src="./images/doing/c.jpg" alt="фотография с гравической программой" />
+                <img  class="img-box" src="./images/portfolio/f-min.jpg" alt="фотография с гравической программой" />
                 <h3 class="doing-txt">
                   Дизайнерские решения
                 </h3>
